src/widgets/snapshots/strotui__widgets__panel__tests__simple_text_lines.snap
---
source: src/widgets/panel.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 12 },
    content: [
        "┌Panel Test────────────────────────────┐",
        "│Hello 1!                              │",
        "│Hello 2!                              │",
        "│Hello 3!                              │",
        "│                                      │",
        "│                                      │",
        "│                                      │",
        "│                                      │",
        "│                                      │",
        "│                                      │",
        "│                                      │",
        "└──────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
